--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,12 @@ allprojects {
     repositories {
         jcenter()
     }
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
